Take two, is this expected behavior?

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -91,3 +91,7 @@ on_failure:
   - ps: $s.substring(0, 100) | Format-Hex
   - ps: $s = Get-Content -Path .\results\multi_real_time_transaction.out -Raw
   - ps: $s.substring(0, 100) | Format-Hex
+  - ps: $s = Get-Content -Path .\expected\with_basics.out -Raw
+  - ps: $s.substring(0, 100) | Format-Hex
+  - ps: $s = Get-Content -Path .\results\with_basics.out -Raw
+  - ps: $s.substring(0, 100) | Format-Hex
