Which version of diff are we running

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -95,3 +95,4 @@ on_failure:
   - ps: $s.substring(0, 100) | Format-Hex
   - ps: $s = Get-Content -Path .\results\with_basics.out -Raw
   - ps: $s.substring(0, 100) | Format-Hex
+  - diff --version
