--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,6 +33,7 @@ environment:
 # scripts that are called at very beginning, before repo cloning
 init:
   - git config --global core.autocrlf input
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 # clone directory
 clone_folder: c:\projects\citus
@@ -96,3 +97,4 @@ on_failure:
   - ps: $s = Get-Content -Path .\results\with_basics.out -Raw
   - ps: $s.substring(0, 100) | Format-Hex
   - diff --version
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
