--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,6 +34,7 @@ environment:
 
 # scripts that are called at very beginning, before repo cloning
 init:
+  - ps: "Get-ChildItem Env:"
   - git config --global core.autocrlf input
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
