--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,10 +31,10 @@ environment:
   APPVEYOR_SAVE_CACHE_ON_ERROR: true
   APPVEYOR_RDP_PASSWORD:
     secure: yUFBUe/7ipg+1gRS8tH5Id4kclb8nUBt4biwbFjQc9U=
+  PG_REGRESS_DIFF_OPTS: -w -C3
 
 # scripts that are called at very beginning, before repo cloning
 init:
-  - ps: "Get-ChildItem Env:"
   - git config --global core.autocrlf input
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
